--- a/index.html
+++ b/index.html
@@ -10,5 +10,12 @@
 
 <body>
   Hello bboydflo!
+
+<script type="text/javascript">
+  var host = "florin-cosmin.dk";
+  if ((host == window.location.host) && (window.location.protocol != "https:"))
+    window.location.protocol = "https";
+</script>
+
 </body>
 </html>
