--- a/index.html
+++ b/index.html
@@ -1,7 +1,12 @@
----
-layout: home
-excerpt: "A simple and clean responsive Jekyll theme for words and photos."
-show_excerpts: true
-paginate: true
-entries_layout: list
----
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Florin Cosmin | Personal Website</title>
+</head>
+<body>
+    <p>Hello, world!</p>
+</body>
+</html>
